--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,11 @@
         "Semana 9/Ejercicio1/lib/jackson-dataformat-xml-2.15.3.jar",
         "Semana 9/Ejercicio1/lib/jackson-dataformat-xml-2.16.0-rc1.jar",
         "Semana 9/Ejercicio1/lib/stax2-api-4.0.0.jar"
+    ],
+    "java.project.sourcePaths": [
+        "Semana 9/Ejercicio1/src",
+        "Plantilla_MVC2/src",
+        "Plantilla_MVC/src",
+        "Plantilla_MVC/lib"
     ]
 }
