--- a/Semana_7/Ejercicio_3/.vscode/settings.json
+++ b/Semana_7/Ejercicio_3/.vscode/settings.json
@@ -2,7 +2,6 @@
     "java.project.sourcePaths": ["src"],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
-        "lib/**/*.jar",
-        "c:\\Users\\Usuario\\Desktop\\Programacion-III\\biblioteca11.jar"
+        "lib/**/*.jar"
     ]
 }
